# claude-launcher

./: .gitignore  CHANGELOG.md  README.md  dashboard.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: BACKEND-DESIGN.md  PAYMENT-SETUP-GUIDE.md  PRD.md  PRODUCT-STRATEGY.md  TEST-PLAN.md  UI-DESIGN.md  compare-warp.html  compare-windows-terminal.html  guide-claude-code-sessions.html  guide-dns-check.html  index.html  robots.txt  sitemap.xml
electron/: main.js  preload.js
electron/handlers/: dependencies.js  folders.js  launcher.js  network.js  sessions.js  terminal.js
electron/services/: claudeCli.js  configService.js  dependencyChecker.js  dnsChecker.js  sessionParser.js  terminalManager.js
src/: App.tsx  DashboardApp.tsx  dashboard-main.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs
src-tauri/src/commands/: folders.rs  launcher.rs  mod.rs  network.rs  sessions.rs
src-tauri/src/models/: config.rs  folder.rs  health.rs  mod.rs  session.rs
src-tauri/src/services/: claude_cli.rs  config_service.rs  dns_checker.rs  mod.rs  session_parser.rs
src/components/: ActiveTerminals.tsx  AddFolderDialog.tsx  AgentSelector.tsx  CommandPalette.tsx  DashboardView.tsx  DependencyCheck.tsx  EmptyState.tsx  FolderItem.tsx  FolderList.tsx  HealthBanner.tsx  LaunchButton.tsx  LayoutSelector.tsx  PaneHeader.tsx  SessionCard.tsx  SessionList.tsx  ShortcutHelp.tsx  TerminalPane.tsx  UpgradePrompt.tsx
src/lib/: formatters.ts  proGate.ts  tauri-api.ts
(+14 files in other folders)
