[package]
name = "claude-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "2"
tokio = { version = "1", features = ["full"] }
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "claude_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
